# mini-engine-c

./: CMakeLists.txt  LICENSE
client/: CMakeLists.txt  main.c
content/gl_shaders/: lit.frag  lit.vert
core/: CMakeLists.txt  assets.c  assets.h  camera.c  camera.h  dirlight.c  dirlight.h  engine.c  engine.h  entity.c  entity.h  env.c  env.h  game_time.c  game_time.h  gl_main.c  gl_main.h  material.c  material.h  mesh.c  mesh.h  physics.c  physics.h  physics_body.c  physics_body.h  scene.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h  world.c  world.h
